gateway/httproute-django.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/logintoken
    backendRefs:
    - name: apigateway
      port: 8001
